option('package_name',
  type: 'string',
  value: '',
  description: 'The value for the GETTEXT_PACKAGE define.'
)

option('package_version',
  type: 'string',
  value: '',
  description: 'The value for the PACKAGE_VERSION define.'
)

option('alsa',
  type: 'boolean',
  value: true,
  description: 'Build ALSA support.'
)

option('static',
  type: 'boolean',
  value: false,
  description: 'Build as a static library.'
)

option('introspection',
  type: 'boolean',
  value: false,
  description: 'Build gobject-introspection support'
)
